--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://burdukiewicz.com/gp-conference/"
+baseURL = "http://burdukiewicz.com/gp-conference2022/"
 
 # This is a "one page"-website, so we do not need these kinds of pages...
 disableKinds = ["section", "taxonomy", "term", "RSS", "robotsTXT", "404"]
@@ -9,7 +9,7 @@ defaultContentLanguage = "en"
 theme = "hugo-product-launch"
 
 # The "title" of your website
-title = "Genomics Platform@WUT 2021 conference"
+title = "Genomics Platform@WUT 2022 conference"
 
 # Render line-breaks in .md-files as line-breaks in HTML.
 # This is e.g. useful for rendering a multi-line address.
@@ -41,7 +41,7 @@ title = "Genomics Platform@WUT 2021 conference"
     # Another "title" :-). This one is used as the site_name on the Hugo's internal
     # opengraph structured data template.
     # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-    title = "Genomics Platform@WUT 2021 conference"
+    title = "Genomics Platform@WUT 2022 conference"
 
     # LICENSE: Hugo Product Launch by Jan Raasch is licensed
     # under Attribution 4.0 International (CC BY 4.0).
